# bagof-core-magic

./: .gitignore  README.md  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
docs/: api.md
src/bagof/core/magic/: __init__.py
tests/: test_import.py  test_issubhint.py  test_magichint.py
